[project]
name = "quickbooks-proxy"
version = "0.1.0"
description = "Proxy API for Intuit QuickBooks that only allows Customers entity endpoints"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
]
